--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <h1>My first web page</h1>
-    <h2>Written with the guidance of <em>Epicodus</em></h2>
+    <h3>Written with the guidance of <em>Epicodus</em></h3>
     <p>This is my <strong>first web page!</strong></p>
     <p>Isn't it nice?</p>
-    <p>Here are some things I am going to learn about coding:</p>
+    <h4>Here are some things I am going to learn about coding:</h4>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
